Changelog
=========

1.1.9 (unreleased)
------------------


1.1.8 (2010-07-02)
------------------

- Avoid using the deprecated five:implements directive.
  [hannosch]

- Avoid any usage of zope.app packages.
  [hannosch]

- Updated package metadata.
  [hannosch]

1.1.8alpha1 (2009-11-18)
------------------------

- Don't register WickedFilter for IATContent. All necessary
  registratons are done for more specific Interfaces per content type
  in wicked.plone.registration. Having an WickedFilter registered for
  a content type (interface), but not the other required components
  like ICacheManager, leads to ComponentLookupErrors.
  Fixes http://dev.plone.org/plone/ticket/9597
  [csenger]

- Adjusted wicked.at.seeker.AdvQueryMatchingSeeker to no longer use
  AdvancedQuery. Fixes http://dev.plone.org/plone/ticket/9398
  [esteele]

- Adjusted test setup to make sure that wicked.atcontent is registered as
  a package before App.FactoryDispatcher's _product_packages gets
  memoized by Plone 4's monkey patch optimization.
  [davisagli]

1.1.7 - 2009-06-20
------------------

- When creating a new content object (to which the wiki link already exists)
  add the backlink to the new object, not to the context which can be
  the object that contains the link in case @@wickedadd is used.
  Fixes http://dev.plone.org/plone/ticket/8731
  [csenger]

1.1.6
-----

- super-massive black hole. Developed by Whit Morriss and contributors.
  Details are unknown until 1.1.6 svn unreleased