@@ -1,7 +1,0 @@
-<xsl:stylesheet version='1.0' xmlns:xsl='http://www.w3.org/1999/XSL/Transform'>
-  <xsl:output method="html" indent="yes"/>
-  <xsl:strip-space elements="*"/>
-  <xsl:template match="@*|node()">
-    <xsl:copy><xsl:apply-templates select="@*|node()"/></xsl:copy>
-  </xsl:template>
-</xsl:stylesheet>
