@@ -4,6 +4,8 @@ Changelog
 1.1.9 (unreleased)
 ------------------
 
+- Avoid the undeclared libxml2/lxml test dependency with a simplistic regex.
+  [elro]
 
 1.1.8 (2010-07-02)
 ------------------
